--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
    <body>
        <h1>My app</h1>
        <p>This is an example HTML document.</p> 
+       <form>Login form</form>
    </body>
 </html>
